# tidy-tunes

./: LICENSE  README.md  pyproject.toml
.github/workflows/: black.yaml  flake8.yaml  isort.yaml
configs/: full_en.yaml
slurm/: launch.sh  run_job.sh
src/tidytunes/models/: __init__.py  dnsmos.py  language_id.py  rolloff.py  source_separation.py  speaker_encoder.py  vad.py
src/tidytunes/pipeline_components/: __init__.py  denoising.py  dnsmos.py  gender_classification.py  language_id.py  rolloff.py  source_separation.py  speaker_segmentation.py  vad.py
src/tidytunes/utils/: __init__.py  audio.py  download.py  etc.py  logging.py  memory.py  onnx.py  paths.py  speaker_embedding.py  tensors.py  trace.py
